design/addtask.css
.main-content-addtask {
  overflow: auto;
  margin-bottom: 300px;
}

.main-content-addtask {
  scrollbar-width: none;
  -ms-overflow-style: none;
  overflow: auto;
}

.main-content-addtask::-webkit-scrollbar {
  display: none;
}

.add-task-header {
  margin-bottom: 40px;
}

.add-task-form-content {
  display: flex;
  flex-direction: column;
  
}

.info-input-field-container {
  display: flex;
  gap: 40px;
  justify-content: space-between;
  max-width: 1000px;
  margin-bottom: 140px;
}

hr {
  border: none;
  border-top: 1px solid #de5656;
  margin: 20px 0;
}

.info-input-field-container label {
  font-weight: 400;
  font-size: 20px;
}

.info-input-field-container-left,
.info-input-field-container-right {
  width: 440px;
  display: flex;
  flex-direction: column;
}

.info-input-field-container-left {
  gap: 28px;
}
.info-input-field-container-right {
  gap: 24px;
}

.info-input-field-container input,
.info-input-field-container textarea,
.info-input-field-container select {
  width: 100%;
  padding: 12px 21px;
  border: solid 1px var(--input-border);
  border-radius: 10px;
  font-size: 20px;
  font-weight: 400;
  font-family: inter;
}

.info-input-field-container textarea {
  height: 120px;
  resize: none;
}

.info-input-field-container input:focus,
.info-input-field-container textarea:focus {
  border: solid 1px var(--light-blue);
}

.red-asterisk {
  color: red;
}

.date-icon {
  position: absolute;
  right: 16px;
  top: 50%;
  transform: translateY(-50%);
}

/* Allgemeines Styling für die Buttons */
.btn-importance-container {
  display: flex;
  gap: 16px;
}

.btn-importance {
  background-color: #ffffff;
  color: var(--join-dark);
  border-radius: 8px;
  font-weight: 400;
  padding: 16px 10px;
  font-size: 16px;
  font-family: inter;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 48px;
  border: 0px;
  gap: 5px;
}

.btn-importance:hover {
  cursor: pointer;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.btn-importance.active {
  background-color: #ffffff;
}

.btn-importance-container label {
  width: 100%;
  height: 56px;
  border-radius: 10px;
  gap: 8px;
  font-size: 20px;
  font-weight: 400;
  padding: 16px 10px;
}

.prio-button {
  background-color: white;
  border: solid 1px var(--input-border);

  font-weight: 700;
  font-size: 21px;
  border: none;
}

.prio-button:hover {
  box-shadow: var(--button-shadow);
  cursor: pointer;
}

.prio-urgent.active,
.prio-medium.active,
.prio-low.active {
  color: white;
  font-size: 21px;
  font-weight: 700;
}

.prio-urgent.active:hover,
.prio-medium.active:hover,
.prio-low.active:hover {
box-shadow: none;
}

.prio-urgent.active {
  background-color: var(--priority-urgent);
}

.prio-medium.active {
  background-color: var(--priority-medium);
}

.prio-low.active {
  background-color: var(--priority-low);
}

.prio-svg path {
  fill: white;
}

.medium:not(.active) img {
  filter: hue-rotate(30deg) saturate(100%);
}

.btn-importance img.active {
  filter: brightness(0) saturate(100%) invert(1);
}

.subtasks-wrapper {
  position: relative;
}

.subtask-input-wrapper {
  position: relative;
}

.subtasks-input {
  margin-bottom: 0;
  box-sizing: border-box;
}

.plus-icon {
  position: absolute;
  top: 50%;
  right: 10px;
  transform: translateY(-50%);
  cursor: pointer;
  border-radius: 50%;
}

.subtasks-icons-wrapper {
  position: absolute;
  top: calc(50% + 15px);
  right: 10px;
  transform: translateY(-50%);
  cursor: pointer;
  border-radius: 50%;
}

.mini-separator {
  width: 1px;
  height: 80%;
  background-color: var(--input-separator-color);
  margin: 0 6px;
}

.plus-icon:hover {
  background-color: #ccc;
}

.subtasks-icons-wrapper {
  display: flex;
  height: 24px;
}

.subtasks-icon {
  width: 24px;
  height: 24px;
}

.sub-task-icon-x {
  width: 18px;
  height: 18px;
}

.subtasks-icon-container {
  width: 24px;
  height: 24px;
  border-radius: 50%;
}

.subtasks-icon-container:hover {
  background-color: #ccc;
}

.subtask-input-error {
  border: solid 1px red;
}

.subtask-input-error::placeholder {
  color: red;
}

.subtask-container-wrapper {
  height: 30px;
  width: 100%;
  display: flex;
  gap: 8px;
  justify-content: center;
  align-items: center;
  position: relative;
  border-radius: 16px;
  z-index: 0;
}

.subtask-input {
  padding-left: 24px;
  height: 100%;
  background-color: var(--main-background);
  width: 100%;
  border: none;
  border-radius: 16px;
}

.subtask-container-wrapper .subtask-input:focus {
  border: none;
  border-bottom: solid 1px var(--light-blue);
  border-radius: none;
}

.subtask-dot {
  position: absolute;
  left: 8px;
}

.single-task-icon-wrapper-after,
.single-task-icon-wrapper-before {
  position: absolute;
  right: 16px;
}

.subtask-container-wrapper
  .subtask-input:focus
  ~ .single-task-icon-wrapper-before {
  display: none !important;
}

.subtask-container-wrapper .single-task-icon-wrapper-after {
  display: none;
}

.subtask-container-wrapper
  .subtask-input:focus
  ~ .single-task-icon-wrapper-after {
  display: flex;
}

.subtask-container-wrapper .subtask-input:focus {
  border-radius: 0 !important;
}

.subtask-container-wrapper .subtask-input:focus + .subtask-dot {
  display: none !important;
}

.added-subtasks {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 6px;
  margin-top: 6px;
  height: auto;
  max-height: 110px;
  overflow: auto;
}

.subtask-container-wrapper:hover .single-task-icon-wrapper-before {
  display: flex !important;
}

.subtask-container-wrapper:hover,
.subtask-container-wrapper:hover .subtask-input {
  background-color: #eeeeee;
  cursor: pointer;
}

.single-subtask-small-icon-wrapper-right {
  width: 26px;
  height: 26px;
  border-radius: 50%;
}

.single-subtask-small-icon-wrapper-right:hover {
  background-color: #ccc;
}

.single-subtask-icon {
  width: 16px;
  height: 16px;
}

.single-subtask-icon-hook {
  width: 22px;
  height: 22px;
}

.separator-dark {
  width: 1px;
  height: 20px;
}

.addTask-button-container {
  display: flex;
  gap: 16px;
}

.btns-addtask {
  display: flex;
  gap: 4px;
}

.addtask-header-overlay {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.dropdown-label {
  padding: 10px;
  background-color: white;
  border-radius: 10px;
  cursor: pointer;
  font-size: 16px;
  border: 1px solid #ddd;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

.dropdown-content {
  
  background-color: white;
  min-width: 100%;
  border: 1px solid #ddd;
  border-radius: 10px;
  z-index: 1;
  max-height: 200px;
  overflow-y: auto;
}

.custom-dropdown {
  position: relative;
  display: inline-block;
  width: 100%;
}

.user-item {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 7px 16px;
  cursor: pointer;
  border-radius: 10px;
}

.user-item:not(.checked-row):hover {
  background-color: #f1f1f1;
}

.checked-row {
  background-color: rgb(33, 33, 33);
  color: white;
  border: 10px;
}

.user-itmen-names {
  display: flex;
  align-items: center;
}

.add-selected-contacts {
  display: flex;
  gap: 10px;
}

.flex-ctr-ctr {
  display: flex;
  justify-content: center;
  align-items: center;
}


.addTask-input-field-img {
  background-image: url(../assets/icons/arrow_drop_downaa.png);
  background-repeat: no-repeat;
  background-position-y: 50%;
  background-position-x: 98%;
}

.contact-list-initals {
  min-height: 32px;
  height: 42px;
  min-width: 32px;
  width: 42px;
  border-radius: 50%;
  color: white;
  border: solid 2px white;
}

.add-task-footer {
  position: absolute;
  bottom: 20px;
  right: 80px;
  left: 312px;
  display: flex;
  justify-content: space-between;
  max-width: 1000px;
  background-color: var(--main-background);
  padding: 20px 0 0 0;
  border-bottom: solid 40px var(--main-background);
  transform: translateY(20px);
}

.required-wrapper {
  align-self: flex-end;
}

.add-task-separator {
  width: 1px;
  height: 440px;
  background-color: var(--input-border);
}

.button-wrapper-add-task:hover > svg path {
  stroke: var(--light-blue);
}

.category-itmen-names {
  display: flex;
  align-items: center;
  padding: 10px 20px;
  border-radius: 10px;
}

.category-itmen-names:hover {
  background-color: #eeeeee;
  cursor: pointer;
}


.hidden-date-input {
  visibility: hidden;
  position: absolute;
}

.date-error-message {
  height: 12px;
  font-size: 12px;
  color: red;
}

.title-error-message {
  height: 12px;
  font-size: 12px;
}

.add-task-wrapper {
  overflow: hidden;         
  transition: max-height 600ms ease-out; 
}

.add-task-wrapper-passive {
  max-height: 0;       
  transition: max-height 600ms ease-out;       
}

.add-task-wrapper-active {
  max-height: 500px; 
  transition: max-height 600ms ease-out;     
}

.category-wrapper {
  overflow: hidden;         
  transition: max-height 600ms ease-out; 
}

.category-wrapper-passive {
  max-height: 0;       
  transition: max-height 600ms ease-out;       
}

.category.wrapper-active {
  max-height: 200px; 
  transition: max-height 600ms ease-out;     
}

.add-task-top {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

.add-task-cross {
  display: flex;
  justify-content: center;
  align-items: center;
 
  align-self: self-start !important;
}

.add-task-cross:hover {
  cursor: pointer;
  background-color: rgba(128, 128, 128, 0.313);
}

.textareaAddTask:focus {
  border-color: #719ECE;  /* Blauton anpassen */
  outline: none;           /* Standard-Outline entfernen */
}

